--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <!-- Google Analytics -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
-    crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
+      crossorigin="anonymous"
+    ></script>
     <!-- Character set and viewport -->
     <meta name="robots" content="index" />
     <meta charset="UTF-8" />
@@ -143,14 +146,49 @@
           </p>
           <br />
           <p>
-           Being a billionaire is all about turning your wildest dreams into reality.
-            Exciting news! Today, Let's see how fast you
-            can spend all those billions in just one day!
+            Being a billionaire is all about turning your wildest dreams into
+            reality. Exciting news! Today, Let's see how fast you can spend all
+            those billions in just one day!
           </p>
         </div>
       </div>
       <br />
+      <div class="elonmusk">
+        <h2 class="fancy about">FAQ</h2>
+      </div>
+      <div class="photo">
+        <div class="About" style="text-align: center">
+          <h2 style="font-family: Audrey; color: #6c757d">
+            Isn't net worth different from having actual cash?
+          </h2>
+
+          <p>
+            Totally! Net worth isn't the same as having money in your pocket. In
+            my tool, I talk about net worth to show how wealth is spread out,
+            not to say that billionaires can just go out and splurge. I get it –
+            a lot of their money is tied up in things like stocks and
+            properties. Even though it's not all in cold, hard cash, they can
+            still use it for things like loans or investments. Long story short,
+            even if it's not ready-to-spend cash, it still packs a financial
+            punch. Want more deets?
+          </p>
+          <br />
+          <br />
+          <h2 style="font-family: Audrey; color: #6c757d">
+            What is the point of this website?
+          </h2>
+          <p>
+            The idea isn't to single out billionaires, but to shine a light on
+            just how much wealth they've got. Sure, governments have budgets
+            too, but they've got a laundry list of things to take care of, like
+            healthcare, education, and public safety. The tool is about
+            illustrating what could happen if even a slice of that billionaire
+            wealth went toward tackling big global problems.
+          </p>
+        </div>
+      </div>
       <br />
+
       <h2 class="fancy Contact">Contact Us</h2>
       <div class="contact" id="contact">
         <div class="gform">
@@ -188,10 +226,9 @@
               required
             ></textarea>
             <button id="btn" class="submitbtn" type="submit">Submit</button>
-            <div style="display:none" class="thankyou_message">
-              <h2>Thanks for contacting us! We will get back to you soon!
-              </h2>
-             </div>
+            <div style="display: none" class="thankyou_message">
+              <h2>Thanks for contacting us! We will get back to you soon!</h2>
+            </div>
           </form>
         </div>
       </div>
@@ -225,6 +262,10 @@
     </script>
 
     <script src="script.js"></script>
-    <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
+    <script
+      data-cfasync="false"
+      type="text/javascript"
+      src="form-submission-handler.js"
+    ></script>
   </body>
 </html>
