--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
             The idea isn't to single out billionaires, but to shine a light on
             just how much wealth they've got. Sure, governments have budgets
             too, but they've got a laundry list of things to take care of, like
-            healthcare, education, and public safety. The tool is about
-            illustrating what could happen if even a slice of that billionaire
-            wealth went toward tackling big global problems.
+            healthcare, education, and public safety.While these are just hypothetical scenarios, they demonstrate the immense possibilities that lie untapped within concentrated wealth. By directing even a small portion of their resources towards these critical areas, billionaires could leave a lasting positive impact on the world and contribute to building a better future for all.
+
+
           </p>
         </div>
       </div>
