--- a/index.html
+++ b/index.html
@@ -178,12 +178,7 @@
             What is the point of this website?
           </h2>
           <p>
-            The idea isn't to single out billionaires, but to shine a light on
-            just how much wealth they've got. Sure, governments have budgets
-            too, but they've got a laundry list of things to take care of, like
-            healthcare, education, and public safety.While these are just hypothetical scenarios, they demonstrate the immense possibilities that lie untapped within concentrated wealth. By directing even a small portion of their resources towards these critical areas, billionaires could leave a lasting positive impact on the world and contribute to building a better future for all.
-
-
+            The point of the "Spend Elon Musk's Money" website isn't to call out billionaires, but more to throw a spotlight on just how crazy rich Elon is. Now, this game is all about having a blast spending Elon's $220 billion in a make-believe world of unlimited luxury. It's like living a billionaire's dream for a moment. But hey, think about it – even if a tiny bit of that mega fortune went to some important stuff, billionaires could seriously make a huge difference and build a way better future for everyone. Food for thought while you're having a good time spending those billions! 🌟💰
           </p>
         </div>
       </div>
