--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -116,6 +116,18 @@
       title="Back to top"
       >↑</a
     >
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
+     crossorigin="anonymous"></script>
+<!-- New Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4770677583521197"
+     data-ad-slot="8522180787"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Jeff Bezos Money</h2>
