--- a/index.html
+++ b/index.html
@@ -117,18 +117,7 @@
       title="Back to top"
       >↑</a
     >
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
-     crossorigin="anonymous"></script>
-<!-- New Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4770677583521197"
-     data-ad-slot="8522180787"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Elon Musk Money</h2>
@@ -190,7 +179,15 @@
             What is the point of this website?
           </h2>
           <p>
-            The point of the "Spend Elon Musk's Money" website isn't to call out billionaires, but more to throw a spotlight on just how crazy rich Elon is. Now, this game is all about having a blast spending Elon's $220 billion in a make-believe world of unlimited luxury. It's like living a billionaire's dream for a moment. But hey, think about it – even if a tiny bit of that mega fortune went to some important stuff, billionaires could seriously make a huge difference and build a way better future for everyone. Food for thought while you're having a good time spending those billions! 🌟💰
+            The point of the "Spend Elon Musk's Money" website isn't to call out
+            billionaires, but more to throw a spotlight on just how crazy rich
+            Elon is. Now, this game is all about having a blast spending Elon's
+            $220 billion in a make-believe world of unlimited luxury. It's like
+            living a billionaire's dream for a moment. But hey, think about it –
+            even if a tiny bit of that mega fortune went to some important
+            stuff, billionaires could seriously make a huge difference and build
+            a way better future for everyone. Food for thought while you're
+            having a good time spending those billions! 🌟💰
           </p>
         </div>
       </div>
