--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -118,18 +118,7 @@
       title="Back to top"
       >↑</a
     >
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
-     crossorigin="anonymous"></script>
-<!-- New Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4770677583521197"
-     data-ad-slot="8522180787"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Bill Gates Money</h2>
@@ -191,9 +180,15 @@
             What is the point of this website?
           </h2>
           <p>
-         
-            The point of the "Spend Bill Gates' Money" website isn't to call out billionaires, but more to throw a spotlight on just how crazy rich Bill Gates is. Now, this game is all about having a blast spending Bill Gates $135 billion in a make-believe world of unlimited luxury. It's like living a billionaire's dream for a moment. But hey, think about it – even if a tiny bit of that mega fortune went to some important stuff, billionaires could seriously make a huge difference and build a way better future for everyone. Food for thought while you're having a good time spending those billions! 🌟💰
-
+            The point of the "Spend Bill Gates' Money" website isn't to call out
+            billionaires, but more to throw a spotlight on just how crazy rich
+            Bill Gates is. Now, this game is all about having a blast spending
+            Bill Gates $135 billion in a make-believe world of unlimited luxury.
+            It's like living a billionaire's dream for a moment. But hey, think
+            about it – even if a tiny bit of that mega fortune went to some
+            important stuff, billionaires could seriously make a huge difference
+            and build a way better future for everyone. Food for thought while
+            you're having a good time spending those billions! 🌟💰
           </p>
         </div>
       </div>
