remove ads and add links

--- a/index.html
+++ b/index.html
@@ -79,22 +79,32 @@
       <section class="photo" id="photo">
         <div class="elonmusk">
           <h1 class="fancy">Spend Elon Musk's Money</h1>
-          <img
-            class="elon"
-            src="./Pictures/elonmusk.webp"
-            alt="Broke Elon Musk"
-          />
-          <img
-            class="mobile"
-            src="./Pictures/elonmusk.webp"
-            alt="Broke Elon Musk"
-          />
-
+          <a
+            href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+            target="_blank"
+          >
+            <img
+              class="elon"
+              src="./Pictures/elonmusk.webp"
+              alt="Broke Elon Musk"
+            />
+          </a>
+          <a
+            href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+            target="_blank"
+          >
+            <img
+              class="mobile"
+              src="./Pictures/elonmusk.webp"
+              alt="Broke Elon Musk"
+            />
+          </a>
           <br />
           <br />
         </div>
       </section>
     </header>
+
     <div id="lottie-animation"></div>
     <div class="wrapper">
       <section class="sticky" id="sticky">$220,000,000,000</section>
@@ -117,16 +127,7 @@
       title="Back to top"
       >↑</a
     >
-<script type="text/javascript">
-	atOptions = {
-		'key' : '27ee4845550d29fc8275948d1b274bcf',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/27ee4845550d29fc8275948d1b274bcf/invoke.js"></scr' + 'ipt>');
-</script>
+
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Elon Musk Money</h2>
