--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -78,17 +78,24 @@
       <section class="photo" id="photo">
         <div class="elonmusk">
           <h1 class="fancy">Spend Bill Gates Money</h1>
-          <img
-            class="elon"
-            src="../Pictures/bill-gates.webp"
-            alt="Broke Bill Gates"
-          />
-          <img
-            class="mobile"
-            src="../Pictures/bill-gates.webp"
-            alt="Broke Bill Gates"
-          />
-
+          <a
+            href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+          >
+            <img
+              class="elon"
+              src="../Pictures/bill-gates.webp"
+              alt="Broke Bill Gates"
+            />
+          </a>
+          <a
+            href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+          >
+            <img
+              class="mobile"
+              src="../Pictures/bill-gates.webp"
+              alt="Broke Bill Gates"
+            />
+          </a>
           <br />
           <br />
         </div>
@@ -119,16 +126,6 @@
       >↑</a
     >
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '27ee4845550d29fc8275948d1b274bcf',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/27ee4845550d29fc8275948d1b274bcf/invoke.js"></scr' + 'ipt>');
-</script>
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Bill Gates Money</h2>
