--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -77,17 +77,24 @@
       <section class="photo" id="photo">
         <div class="elonmusk">
           <h1 class="fancy">Spend Jeff Bezos Money</h1>
-          <img
-            class="elon"
-            src="../Pictures/jeff-bezos.webp"
-            alt="Broke Jeff Bezos"
-          />
-          <img
-            class="mobile"
-            src="../Pictures/jeff-bezos.webp"
-            alt="Broke Jeff Bezos"
-          />
-
+          <a
+            href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+          >
+            <img
+              class="elon"
+              src="../Pictures/jeff-bezos.webp"
+              alt="Broke Jeff Bezos"
+            />
+          </a>
+          <a
+            href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+          >
+            <img
+              class="mobile"
+              src="../Pictures/jeff-bezos.webp"
+              alt="Broke Jeff Bezos"
+            />
+          </a>
           <br />
           <br />
         </div>
@@ -116,18 +123,6 @@
       title="Back to top"
       >↑</a
     >
-
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : '27ee4845550d29fc8275948d1b274bcf',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="//www.topcreativeformat.com/27ee4845550d29fc8275948d1b274bcf/invoke.js"></scr' + 'ipt>');
-</script>
 
     <div class="container">
       <div class="elonmusk">
