--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -80,6 +80,7 @@
           <h1 class="fancy">Spend Bill Gates Money</h1>
           <a
             href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+            target="_blank"
           >
             <img
               class="elon"
@@ -89,6 +90,7 @@
           </a>
           <a
             href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+            target="_blank"
           >
             <img
               class="mobile"
