--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -79,6 +79,7 @@
           <h1 class="fancy">Spend Jeff Bezos Money</h1>
           <a
             href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+            target="_blank"
           >
             <img
               class="elon"
@@ -88,6 +89,7 @@
           </a>
           <a
             href="https://www.toprevenuegate.com/q2461per?key=efe982cc4c82f546b269e6f5758545d7"
+            target="_blank"
           >
             <img
               class="mobile"
