--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -127,7 +127,10 @@
       title="Back to top"
       >↑</a
     >
-
+    <script
+      data-cfasync="false"
+      src="//d9leupuz17y6i.cloudfront.net/?pueld=1013536"
+    ></script>
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Bill Gates Money</h2>
@@ -280,5 +283,9 @@
       src="../form-submission-handler.js"
     ></script>
     <script src="script.js"></script>
+    <script
+      data-cfasync="false"
+      src="//d9leupuz17y6i.cloudfront.net/?pueld=1013536"
+    ></script>
   </body>
 </html>
