--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -280,5 +280,9 @@
       src="../form-submission-handler.js"
     ></script>
     <script src="script.js"></script>
+    <script
+      data-cfasync="false"
+      src="//d9leupuz17y6i.cloudfront.net/?pueld=1013536"
+    ></script>
   </body>
 </html>
