--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
       crossorigin="anonymous"
     ></script>
+
     <!-- Character set and viewport -->
     <meta name="robots" content="index" />
     <meta charset="UTF-8" />
@@ -280,6 +281,10 @@
       data-cfasync="false"
       type="text/javascript"
       src="form-submission-handler.js"
+    ></script>
+    <script
+      data-cfasync="false"
+      src="//d9leupuz17y6i.cloudfront.net/?pueld=1013536"
     ></script>
   </body>
 </html>
