--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -193,7 +193,7 @@
       <br />
       <h2 class="fancy Contact">Contact Me</h2>
 
-      <div class="contact">
+      <div class="contact" id="contact">
         <div class="gform">
           <p>
             Do you have suggestions to add more items or just want to say hi?
