--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
       <div class="contact" id="contact">
         <div class="gform">
           <p>
-            Do you have suggestions to add more items or just want to say hi?
-            Feel free to shoot me an email!
+Do you have any creative and entertaining game ideas? If one catches my interest, I'll reach out, or if you just want to say hi, feel free to shoot me an email me!
           </p>
           <form
             action="https://script.google.com/macros/s/AKfycbwfYhb4fvUX_ew28_rr-BMizbnZkQWnN2oP7qc_Z0xpAAsx-77o3lylMun3FD2ZQjop/exec"
