--- a/copyrights.html
+++ b/copyrights.html
@@ -180,6 +180,18 @@
           address copyright matters on spendelonmoney.shop.
         </p>
       </section>
+      <section>
+        <p>
+          • Everything on this website can be used for free under the CC0
+          license. This includes things in sections like Videos, Images, Sounds,
+          Music, and most of the stuff in Articles. The only exception is some
+          pictures in certain Articles, which are from existing works under the
+          Fair Use principle. The person who made this website doesn't own the
+          copyright for those pictures, so if you want to use them, you should
+          follow the original author's rules. This website follows copyright
+          rules, respects ownership, and gives credit where it's due.
+        </p>
+      </section>
     </main>
     <br />
     <br />
