--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -181,13 +181,9 @@
 
       <section>
         <p>
-          *This Site is affiliated with Monumetric (dba for The Blogger Network,
-          LLC) for the purposes of placing advertising on the Site, and
-          Monumetric will collect and use certain data for advertising purposes.
-          To learn more about Monumetric's data usage, click here:
-          <a href="http://www.monumetric.com/publisher-advertising-privacy"
-            >Publisher Advertising Privacy</a
-          >*
+          The website doesn't ask you to sign up or share personal details. The
+          website doesn't store extra information about you, and we don't look
+          at or keep track of where you are.
         </p>
       </section>
     </main>
