--- a/termsofuse.html
+++ b/termsofuse.html
@@ -174,9 +174,22 @@
           signifies your acceptance of any changes.
         </p>
       </section>
+      <section>
+        <h2>8. Safety</h2>
+        <p>
+          The owner assumes no responsibility for possible misinterpretation or
+          harm caused by the information on this website. All the information on
+          this website is posted with a good intention, observing generally
+          accepted moral principles. This website does not contain anything
+          related to child abuse, pornography, violence encouragement, illegal
+          actions, dangerous and harmful actions, animal cruelty, or dishonest
+          or deceptive practices. This website does not contain any malicious
+          software or malware.
+        </p>
+      </section>
 
       <section>
-        <h2>8. Contact Information</h2>
+        <h2>9. Contact Information</h2>
         <p>
           Questions or concerns? Reach out to us at info@spendelonmoney.shop.
         </p>
