--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
     </header>
 
     <div id="lottie-animation"></div>
+
+    <!-- <div class="ads2"></div> -->
+
+    
     <div class="wrapper">
       <section class="sticky" id="sticky">$220,000,000,000</section>
       <main></main>
@@ -122,6 +126,9 @@
       >↑</a
     >
 
+
+    <!-- <div class="ads"></div> -->
+    
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Elon Musk Money</h2>
@@ -201,7 +208,9 @@
       <div class="contact" id="contact">
         <div class="gform">
           <p>
-Do you have any creative and entertaining game ideas? If one catches my interest, I'll reach out, or if you just want to say hi, feel free to shoot me an email me!
+            Do you have any creative and entertaining game ideas? If one catches
+            my interest, I'll reach out, or if you just want to say hi, feel
+            free to shoot me an email me!
           </p>
           <form
             action="https://script.google.com/macros/s/AKfycbwfYhb4fvUX_ew28_rr-BMizbnZkQWnN2oP7qc_Z0xpAAsx-77o3lylMun3FD2ZQjop/exec"
@@ -240,6 +249,7 @@ Do you have any creative and entertaining game ideas? If one catches my interest
         </div>
       </div>
     </div>
+    <!-- <div class="ads" ></div> -->
     <footer>
       <div class="links">
         <a href="#contact" target="_blank">Contact </a>
