--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -92,6 +92,7 @@
       </section>
     </header>
     <div id="lottie-animation"></div>
+    <div class="ads2"></div>
     <div class="wrapper">
       <div class="sticky" id="sticky">$170,000,000,000</div>
       <div id="congrats"></div>
@@ -114,7 +115,7 @@
       title="Back to top"
       >↑</a
     >
-
+    <div class="ads"></div>
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Jeff Bezos Money</h2>
@@ -236,6 +237,8 @@
         </div>
       </div>
     </div>
+    <div class="ads" ></div>
+
     <footer>
       <div class="links">
         <a href="#contact" target="_blank">Contact </a>
