--- a/spend-jeff-bezos-money/index.html
+++ b/spend-jeff-bezos-money/index.html
@@ -96,7 +96,8 @@
       </section>
     </header>
     <div id="lottie-animation"></div>
-    <div class="ads2"></div>
+    <div class="ads-container">    <div class="ads2"></div></div>
+
     <div class="wrapper">
       <div class="sticky" id="sticky">$170,000,000,000</div>
       <div id="congrats"></div>
@@ -119,7 +120,8 @@
       title="Back to top"
       >↑</a
     >
-    <div class="ads"></div>
+   
+    <div class="ads-container"><div class="ads1"></div></div>
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Jeff Bezos Money</h2>
@@ -241,7 +243,7 @@
         </div>
       </div>
     </div>
-    <div class="ads" ></div>
+ <div class="ads-container"> <div class="ads"></div></div>
 
     <footer>
       <div class="links">
