--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <div id="lottie-animation"></div>
 
-    <!-- <div class="ads2"></div> -->
+    <div class="ads-container">    <div class="ads2"></div></div>
 
     
     <div class="wrapper">
@@ -127,7 +127,7 @@
     >
 
 
-    <!-- <div class="ads"></div> -->
+    <div class="ads-container"><div class="ads1"></div></div>
     
     <div class="container">
       <div class="elonmusk">
@@ -249,7 +249,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="ads" ></div> -->
+    <div class="ads-container"> <div class="ads"></div></div>
     <footer>
       <div class="links">
         <a href="#contact" target="_blank">Contact </a>
