--- a/spend-bill-gates-money/index.html
+++ b/spend-bill-gates-money/index.html
@@ -97,7 +97,7 @@
       </section>
     </header>
     <div id="lottie-animation"></div>
-
+    <div class="ads-container">    <div class="ads2"></div></div>
     <div class="wrapper">
       <div class="sticky" id="sticky">$135,000,000,000</div>
       <div id="congrats"></div>
@@ -120,7 +120,7 @@
       title="Back to top"
       >↑</a
     >
-
+    <div class="ads-container"><div class="ads1"></div></div>
     <div class="container">
       <div class="elonmusk">
         <h2 class="fancy about">About Spend Bill Gates Money</h2>
@@ -240,6 +240,7 @@
         </div>
       </div>
     </div>
+    <div class="ads-container"> <div class="ads"></div></div>
     <footer>
       <div class="links">
         <a href="#contact" target="_blank">Contact </a>
