--- a/termsofuse.html
+++ b/termsofuse.html
@@ -111,6 +111,11 @@
         }
       }
     </style>
+    <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4770677583521197"
+    crossorigin="anonymous"
+  ></script>
   </head>
 
   <body>
