--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         </div>
       </div>
       <br />
+      <div class="ads3"></div>
       <div class="elonmusk">
         <h2 class="fancy about">FAQ</h2>
       </div>
@@ -185,6 +186,7 @@
             punch. Want more deets?
           </p>
           <br />
+          <div class="ads-container"> <div class="ads"></div></div>
           <br />
           <h2 style="font-family: Audrey; color: #6c757d">
             What is the point of this website?
@@ -249,7 +251,7 @@
         </div>
       </div>
     </div>
-    <div class="ads-container"> <div class="ads"></div></div>
+
     <footer>
       <div class="links">
         <a href="#contact" target="_blank">Contact </a>
